<resources>
    <string name="app_name">mudah.my</string>
    <string name="gcm_sender_id">701010471426</string>
    <string name="google_app_id">mudah-a508f</string>
    <string name="advance_search">Search</string>
    <string name="btn_search">OK</string>
    <string name="intro_title">WANT A NEW PRIVATE ACCOUNT?</string>
    <string name="intro_desc"><![CDATA[<b>Manage ads</b> in an easier way and <b>chat directly</b> to buyers and sellers with new private account features.]]></string>
    <string name="intro_no_thx">NO THANKS</string>
    <string name="intro_sign_now">SIGN UP NOW</string>
    <string name="intro_proniaga_notification"><![CDATA[This is NOT <b>PRO Niaga</b> account login. Please refer to the <b>desktop</b> version to login to your PRO Niaga account]]></string>
    <string name="send_email">Send Email</string>
    <string name="choose_region">Choose Region</string>
    <string name="choose_region_message">Choose region to find ads near you. You can always change your region.</string>
    <string name="change_region">Region</string>
    <string name="ads_list_search_field_all_categories">ALL CATEGORIES</string>
    <string name="ads_list_search_field_for_sale">For sale</string>
    <string name="ads_list_search_field_purchase">Purchase</string>
    <string name="ads_list_search_field_company_ads">Company ads</string>
    <string name="ads_list_search_field_cheapest_first">Show cheapest first</string>
    <string name="ads_search_title_only">Search Title Only</string>
    <string name="ads_list_search_field_available">Available</string>
    <string name="action_ads_list_mode">List view</string>
    <string name="action_ads_grid_mode">Grid view</string>
    <string name="ads_list_toast_ad_watch_saved">Favorite search is saved</string>
    <string name="ads_list_toast_ad_watch_already_saved">You have already saved this favorite search</string>
    <string name="ads_list_toast_ad_watch_too_many_ad_watches">You have too many favorite searches. Delete an old saved favorite search before adding a new.</string>
    <string name="ads_list_toast_ad_watch_failed">Could not save favorite search. Please try again or contact support.</string>
    <string name="ads_list_toast_invalid_query">Please use alphanumeric characters in your search</string>
    <string name="ad_view_section_text_information">Information</string>
    <string name="ad_view_section_text_insurance">Insurance</string>
    <string name="ad_view_section_text_description">Description</string>
    <string name="ad_view_section_text_others_have_also_looked_at">Others have also looked at</string>
    <string name="ad_view_section_text_option">Options</string>
    <string name="ad_view_advertised_by">Advertised by</string>
    <string name="ad_view_text_on">on</string>
    <string name="ad_view_text_company">(Company).</string>
    <string name="ad_view_text_category">Category:</string>
    <string name="ad_view_text_price">Price</string>
    <string name="ad_view_text_before">(Before</string>
    <string name="ad_view_text_municipality">Municipality:</string>
    <string name="ad_view_text_insurance">Insurance:</string>
    <string name="ad_view_text_ad_type">Ad Type</string>
    <string name="ad_view_text_today">Today</string>
    <string name="ad_view_text_colon">:</string>
    <string name="ad_not_exist">This item has been sold</string>
    <string name="ad_view_insurance_section_text">Insurance is included with purchase of this car</string>
    <string name="ad_view_menu_phone">CALL</string>
    <string name="ad_view_menu_sms">SMS</string>
    <string name="ad_view_menu_delete">Delete</string>
    <string name="ad_view_menu_email">EMAIL</string>
    <string name="ad_view_menu_save">Save ad</string>
    <string name="ad_view_menu_share">Share</string>
    <string name="ad_view_menu_maps">View on map</string>
    <string name="ad_view_menu_chat"><![CDATA[CHAT<sup><small><small><font color=#DD0000>BETA</font></small></small></sup>]]></string>
    <string name="ad_view_toast_saved_ad">The ad is saved</string>
    <string name="ad_view_toast_already_saved">You have already saved this ad</string>
    <string name="ad_view_toast_too_many_saved_ads">You have too many saved ads. Delete an old saved ad before adding a
        new.
</string>
    <string name="ad_view_toast_failed_to_save_ad">Could not save the ad. Please try again or contact support.</string>
    <string name="ad_view_toast_delete_ad">We hope you got a good deal through Mudah.my. Your ad will be deleted in 30 minutes.</string>
    <string name="ad_view_toast_failed_delete_ad">Could not delete the ad. Please try again or contact support.</string>
    <string name="ad_view_toast_swipe_ad">Swipe to browse ads</string>
    <string name="mail_support_title">Feedback</string>
    <string name="mail_support_info">For questions and concerns about Mudah Android App, kindly contact us by filling up the form below</string>
    <string name="mail_name">Name:</string>
    <string name="mail_email">Email:</string>
    <string name="mail_phone_number">Phone number (optional):</string>
    <string name="mail_message">Message:</string>
    <string name="mail_report_title">Report %s</string>
    <string name="mail_report_info">About</string>
    <string name="mail_report_message">What is wrong with the ad:</string>
    <string name="mail_advertiser_dialog_title">Email advertiser</string>
    <string name="mail_advertiser_dialog_your_name">Your name</string>
    <string name="mail_advertiser_dialog_your_email">Your email</string>
    <string name="mail_advertiser_dialog_your_phone_number">Your phone number</string>
    <string name="mail_advertiser_dialog_message">Your message</string>
    <string name="mail_advertiser_dialog_send_text">Send</string>
    <string name="mail_advertiser_dialog_cancel_text">Cancel</string>
    <string name="mail_dialog_send_copy_to_me">Send me a copy</string>
    <string name="mail_dialog_pdpa_internal_message">Sign me up for Mudah.my\'s mailing list to receive exciting news!</string>
    <string name="mail_dialog_or">Or</string>
    <string name="mail_dialog_pdpa_internal_external_message">Sign me up for Mudah.my and its partners\' mailing lists to receive exciting news!</string>
    <string name="mail_dialog_pdpa_tnc_message">By clicking "Submit", I confirm that I have read, understood and accepted the Personal Data Protection Notice.</string>
    <string name="mail_advertiser_dialog_progress_message">Email is sending</string>
    <string name="mail_advertiser_alert_dialog_title">Check the details</string>
    <string name="mail_advertiser_alert_dialog_button_text">Cancel</string>
    <string name="mail_advertiser_alert_dialog_button_ok">OK</string>
    <string name="mail_advertiser_alert_dialog2_title">Error</string>
    <string name="mail_advertiser_alert_dialog2_message">Something went wrong</string>
    <string name="mail_advertiser_alert_dialog2_button_text">Cancel</string>
    <string name="mail_dialog_toast_hint">Email sent</string>
    <string name="mail_support_dialog_toast_hint">Email to Support sent</string>
    <string name="image_switcher_loading_dialog_text">Loading&#8230;</string>
    <string name="ad_watch_long_press_menu_title">Options</string>
    <string name="ad_watch_long_press_menu_show">Show</string>
    <string name="ad_watch_long_press_menu_delete">Delete</string>
    <string name="ad_watch_saved_ads_load_more_button">No saved ads</string>
    <string name="ad_watch_list_watched_ads">Favorite searches</string>
    <string name="ad_watch_list_saved_ads">Favorite ads</string>
    <string name="ad_watch_list_update">Update</string>
    <string name="ad_watch_list_change">Change</string>
    <string name="ad_watch_list_menu_update">Update</string>
    <string name="ad_watch_list_menu_saved_ads">Saved ads</string>
    <string name="ad_watch_list_view_toast_ad_watch_removed">Favorite search is removed</string>
    <string name="ad_watch_list_view_toast_ad_watch_remove_failed">Could not remove Favorite search. Please try again or contact support.</string>
    <string name="ad_watch_list_view_menu_delete">Delete</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="insert_ad_price_info_text">Your ad will be reviewed according to the rules of the Blocket.se. After approval, it will be published for a period of 60 days.</string>
    <string name="insert_ad_category_title">Category</string>
    <string name="insert_ad_personal_information_title">Personal information</string>
    <string name="insert_ad_personal_information_name">Name</string>
    <string name="insert_ad_personal_information_email">Email</string>
    <string name="insert_ad_personal_information_phone_number">Phone number</string>
    <string name="insert_ad_personal_information_hide_phone_number">Hide my phone</string>
    <string name="dialog_proniaga_redirect_ok">Ok! Login Now</string>
    <string name="dialog_proniaga_redirect_cancel">Cancel</string>
    <string name="ads_search">Search</string>
    <string name="placeholder">placeholder</string>
    <string name="mail_advertiser_send">SEND</string>
    <string name="save_bookmarks">Save this search</string>
    <string name="menu_item_insertad">Sell Item FREE</string>
    <string name="menu_item_find">Find Item</string>
    <string name="menu_item_signin">Sign In</string>
    <string name="menu_item_separator">|</string>
    <string name="menu_item_signup_superscript"><![CDATA[Sign Up <sup><small><small>NEW</small></small></sup>]]></string>
    <string name="menu_item_user">user@user.com</string>
    <string name="menu_item_user_total_ads">%1$s live ads</string>
    <string name="menu_item_favorite">My Favourites</string>
    <string name="menu_item_chat"><![CDATA[Chat <sup><small><small><font color=#DD0000><b>BETA</b></font></small></small></sup>]]></string>
    <string name="menu_item_bookmark">My Saved Searches</string>
    <string name="menu_item_terms">Terms</string>
    <string name="menu_item_safely">Shop Safely</string>
    <string name="menu_item_privacy">Privacy</string>
    <string name="menu_item_support">Support</string>
    <string name="menu_item_betauser">Beta</string>
    <string name="menu_item_logout">Logout</string>
    <string name="roboto_regular">sans-serif</string>
    <string name="beta_users_dialog_title">Beta User Sign Up</string>
    <string name="beta_users_dialog_name">Name</string>
    <string name="beta_users_dialog_email">Email (Required)</string>
    <string name="beta_users_dialog_phone_number">Phone Number</string>
    <string name="beta_user_interview_message">Interested in coming in for in-person interview in Mid-Valley, Kuala Lumpur?</string>
    <string name="beta_user_tnc_message">Hi!\n\nBy signing up as a Beta User, you’ll be helping us build a better Mudah app experience for you. We’ll be sending occasional requests for feedback on new features through our mailing list. Thanks for agreeing to help out!</string>
    <string name="beta_user_pdpa_internal_message">Sign me up for Mudah.my\'s beta user mailing list!</string>
    <string name="activation_header">We\'re waiting for your activation</string>
    <string name="activation_1">Within several minutes, you\'ll receive an email with your activation link.</string>
    <string name="activation_2">The email is sent to the following address:  &lt;font color=#00b8ff> %1$s. &lt;/font> In order to activate your account click on the link and follow the prompts.</string>
    <string name="activation_3">Check your junk or spam folder if you did not receive the email.</string>
    <string name="activation_4">Can\'t find the email? Resend activation link</string>
    <string name="wrong_email">Whoops!.. Wrong email? Try to Sign Up again</string>
    <string name="chat_attach_pic">Attach Picture</string>
    <string name="chat_notification_close">Mute</string>
    <string name="chat_state_block">Block</string>
    <string name="chat_report">Report</string>
</resources>