<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/actionbar"
        layout="@layout/actionbar" />

    <TextView
        style="@style/SignForm.Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/activation_header"
        android:textSize="16sp"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:gravity="center"
        android:fontFamily="@string/roboto_regular"/>

    <TextView
        android:id="@+id/sending_email"
        style="@style/SignForm.TextMsg"
        android:text="@string/activation_1"
        android:fontFamily="@string/roboto_regular"/>


    <TextView
        android:id="@+id/tv_sign_up_activation_msg"
        style="@style/SignForm.TextMsg"
        android:text="@string/activation_2"
        android:fontFamily="@string/roboto_regular"/>

    <TextView
            style="@style/SignForm.TextMsg"
            android:text="@string/activation_3"
            android:fontFamily="@string/roboto_regular"/>

    <TextView
        android:id="@+id/act_4"
        style="@style/SignForm.TextMsg"
        android:text="@string/activation_4"
        android:fontFamily="@string/roboto_regular"/>

    <ProgressBar
        android:id="@+id/pb_loading"
        style="?android:attr/progressBarStyleLargeInverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/wrong_email"
            style="@style/SignForm.TextMsg"
            android:text="@string/wrong_email"
            android:fontFamily="@string/roboto_regular"
            android:gravity="bottom|center"
            android:layout_alignParentBottom="true"
            android:paddingBottom="16dp"/>

    </RelativeLayout>
</LinearLayout>