<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_attach_image"
        android:title="@string/chat_attach_pic"
        app:showAsAction="always"
        tools:ignore="AppCompatResource"
        android:icon="@drawable/ic_menu_attach"/>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/mute_chat_notification"
            android:showAsAction="never"
            android:title="@string/chat_notification_close"
            app:showAsAction="never"
            tools:ignore="AppCompatResource" />
        <item
            android:id="@+id/menu_chat_block"
            android:showAsAction="never"
            android:title="@string/chat_state_block"
            app:showAsAction="never"
            tools:ignore="AppCompatResource" />
        <item
            android:id="@+id/menu_chat_report"
            android:showAsAction="never"
            android:title="@string/chat_report"
            app:showAsAction="never"
            tools:ignore="AppCompatResource" />

    </group>
</menu>