<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/actionbar"
        layout="@layout/actionbar" />

    <fragment
        android:id="@+id/f_actionbar"
        android:name="com.mudah.my.fragments.InitializationFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ad_view_button"
        android:gravity="center_vertical">

        <TextView
            style="@style/Title.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/beta_users_dialog_title" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:id="@+id/tv_beta_user_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="9dp"
                android:text="@string/beta_user_tnc_message" />

            <EditText
                android:id="@+id/et_email"
                style="@style/InsertAd.EditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/beta_users_dialog_email"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_name"
                style="@style/InsertAd.EditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/beta_users_dialog_name"
                android:inputType="textPersonName"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_phone"
                style="@style/InsertAd.EditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/beta_users_dialog_phone_number"
                android:inputType="number"
                android:maxLength="13"
                android:singleLine="true" />


            <LinearLayout
                android:id="@+id/ll_pdpn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-3dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cb_pdpa_internal_checkbox"
                    style="@style/Checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:text="@string/beta_user_pdpa_internal_message" />


                <CheckBox
                    android:id="@+id/cb_beta_user_interview"
                    style="@style/Checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:text="@string/beta_user_interview_message" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_pdpa_tnc_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="9dp"
                android:text="@string/mail_dialog_pdpa_tnc_message" />

            <Button
                android:id="@+id/b_send"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/emailadvertiser_send_btn"
                android:text="@string/mail_advertiser_send"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
