<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/action_search_white"
        android:showAsAction="always"
        android:title="@string/ads_search"
        app:showAsAction="always"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/badge"
        android:title="@string/menu_item_chat"
        android:icon="@drawable/ic_chat_white"
        app:actionLayout="@layout/actionbar_badge_layout"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_switch"
        android:title=""
        android:icon="@drawable/ic_action_list"
        app:showAsAction="never"
        tools:ignore="AppCompatResource"/>
    <item
        android:id="@+id/menu_save_bookmarks"
        android:title="@string/save_bookmarks"
        android:icon="@drawable/ic_star"
        app:showAsAction="never" />
</menu>