<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/actionbar"
        layout="@layout/actionbar" />

    <fragment
        android:id="@+id/f_actionbar"
        android:name="com.mudah.my.fragments.InitializationFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ad_view_button"
        android:gravity="center_vertical">

        <TextView
            style="@style/Title.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/mail_advertiser_dialog_title" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                style="@style/EmailAdvertiser.Label"
                android:text="@string/mail_advertiser_dialog_your_name" />

            <EditText
                android:id="@+id/et_name"
                style="@style/InsertAd.EditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mail_advertiser_dialog_your_name"
                android:inputType="textPersonName"
                android:singleLine="true" />

            <TextView
                style="@style/EmailAdvertiser.Label"
                android:text="@string/mail_advertiser_dialog_your_email" />

            <EditText
                android:id="@+id/et_email"
                style="@style/InsertAd.EditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mail_advertiser_dialog_your_email"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

            <TextView
                style="@style/EmailAdvertiser.Label"
                android:text="@string/mail_advertiser_dialog_your_phone_number" />

            <EditText
                android:id="@+id/et_phone"
                style="@style/InsertAd.EditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mail_advertiser_dialog_your_phone_number"
                android:inputType="number"
                android:maxLength="13"
                android:singleLine="true" />

            <TextView
                style="@style/EmailAdvertiser.Label"
                android:text="@string/mail_advertiser_dialog_message" />

            <EditText
                android:id="@+id/et_message"
                style="@style/InsertAd.EditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/mail_advertiser_dialog_message"
                android:lines="4"
                android:scrollbars="vertical" />

            <CheckBox
                android:id="@+id/cb_send_copy_to_me"
                style="@style/Checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:gravity="top"
                android:text="@string/mail_dialog_send_copy_to_me" />

            <LinearLayout
                android:id="@+id/ll_pdpn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_pdpn_checkboxes"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/cb_pdpa_internal_checkbox"
                        style="@style/Checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="top"
                        android:text="@string/mail_dialog_pdpa_internal_message" />


                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:gravity="center_horizontal"
                        android:text="@string/mail_dialog_or" />

                    <CheckBox
                        android:id="@+id/cb_pdpa_internal_external_checkbox"
                        style="@style/Checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="top"
                        android:text="@string/mail_dialog_pdpa_internal_external_message" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_pdpa_tnc_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="9dp"
                    android:paddingRight="9dp"
                    android:text="@string/mail_dialog_pdpa_tnc_message" />
            </LinearLayout>

            <Button
                android:id="@+id/b_send"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/emailadvertiser_send_btn"
                android:text="@string/mail_advertiser_send"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
