<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_menu_user"
    style="@style/Menu.ItemContainerUser"
    android:layout_width="match_parent"
    android:layout_height="172dp"
    android:background="@drawable/ua_bg">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_user_image"
        style="@style/Menu.ItemIconBig"
        android:background="@drawable/signin_usericon" />

    <ImageView
        android:id="@+id/iv_home"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingEnd="12dp"
        android:paddingLeft="20dp"
        android:paddingRight="12dp"
        android:paddingStart="20dp"
        android:src="@drawable/ic_home_white" />

    <LinearLayout
        android:id="@+id/ll_user_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_user_email"
            style="@style/Menu.ItemLabelUser"
            android:text="@string/menu_item_user"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_total_ads"
            style="@style/Menu.ItemLabelUser"
            android:text="@string/menu_item_user_total_ads"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_signin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="6dp">

        <TextView
            android:id="@+id/tv_sign_in_label"
            style="@style/Menu.ItemLabelUser"
            android:text="@string/menu_item_signin"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_label_separator"
            style="@style/Menu.ItemLabelUser"
            android:text="@string/menu_item_separator"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_sign_up_label"
            style="@style/Menu.ItemLabelUser"
            android:text="@string/menu_item_signup_superscript"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>