<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/light_brown"
    android:gravity="center_vertical|center_horizontal|center"
    android:minHeight="140dp"
    android:minWidth="280dp"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp">

    <TextView
        android:id="@+id/tv_dialog_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        tools:text="@string/placeholder" />

    <Button
        android:id="@+id/tv_dialog_ok"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_proniaga_redirect_ok" />

    <Button
        android:id="@+id/tv_dialog_cancel"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_proniaga_redirect_cancel" />

</LinearLayout>

